deployment/burns/monty-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: monty
    app.kubernetes.io/component: monty
    app.kubernetes.io/instance: monty
    app.kubernetes.io/name: monty
    app.kubernetes.io/part-of: monty
    app.openshift.io/runtime-version: micro
  name: monty
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: monty
    weight: 100
  wildcardPolicy: None
